include( CTest )

if(BUILD_TESTING AND (UNIX AND NOT APPLE))
  find_package(Qt5Test REQUIRED)

  add_subdirectory(main)

  add_subdirectory(AddressRangeDialogTest)
  add_subdirectory(AddressTableTest)
  add_subdirectory(commandLinePrintingTest)
  add_subdirectory(compilerLibTest)
  add_subdirectory(CustomServiceDialogTest)
  add_subdirectory(DNSTest)
  add_subdirectory(FirewallDialogTest)
  add_subdirectory(FWBTreeTest)
  add_subdirectory(FWObjectTest)
  add_subdirectory(generatedScriptTestsIpfilter)
  add_subdirectory(generatedScriptTestsIpfw)
  add_subdirectory(generatedScriptTestsLinux)
  add_subdirectory(generatedScriptTestsPF)
  add_subdirectory(generatedScriptTestsSecuwall)
  add_subdirectory(genericDialogTest)
  add_subdirectory(GroupObjectDialogTest)
  add_subdirectory(ICMP6ServiceDialogTest)
  add_subdirectory(ICMPServiceDialogTest)
  add_subdirectory(ImporterTest)
  add_subdirectory(Inet6AddrMaskTest)
  add_subdirectory(InetAddrMaskTest)
  add_subdirectory(instDialogClusterTest)
  add_subdirectory(instDialogCompileTest)
  add_subdirectory(instDialogInspectTest)
  add_subdirectory(instDialogInstallTest)
  add_subdirectory(instDialogObjectListTest)
  add_subdirectory(InterfaceDialogTest)
  add_subdirectory(IPDialogTest)
  add_subdirectory(IPServiceDialogTest)
  add_subdirectory(NetworkDialogTest)
  add_subdirectory(newClusterDialogTest)
  add_subdirectory(ObjectManipulatorTest)
  add_subdirectory(ObjectMatcherTest)
  add_subdirectory(parseCommandLineTest)
  add_subdirectory(PFImporterTest)
  add_subdirectory(PIXImporterTest)
  add_subdirectory(RCS)
  add_subdirectory(RuleSetViewContextMenuTest)
  add_subdirectory(RuleSetViewTest)
  add_subdirectory(startTipDialogTest)
  add_subdirectory(TagServiceDialogTest)
  add_subdirectory(TCPServiceDialogTest)
  add_subdirectory(UDPServiceDialogTest)
  add_subdirectory(UsageResolverTest)
  add_subdirectory(UserSerivceDialogTest)
endif()
